fix CSS overflow

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -27,19 +27,6 @@ section {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
  /* unvisited link */
  a:link {
   color: black;
